<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GeekTo5k</string>
    <string name="action_settings">Settings</string>
    <string name="action_start_recognition_updates">Request Updates</string>
    <string name="action_stop_recognition_updates">Stop Updates</string>
    <string name="enter_username">ENTER USERNAME</string>
    <string name="account_username_empty">Name is required!</string>
    <string name="account_store_exception">Oops! Account could\'t be stored!</string>
    <string name="account_login">Login</string>
    <string name="account_banner_title">GEEK TO 5K</string>
    <string name="activity_starting_updates">Requesting new activity updates!</string>
    <string name="cycling">CYCLING</string>
    <string name="on_foot">ON FOOT</string>
    <string name="standing">STANDING</string>
    <string name="searching">SEARCHING</string>
    <string name="vehicle">DRIVING</string>
    <string name="current_activity">YOUR\'RE CURRENTLY</string>
    <string name="standby">PLEASE STAND BY</string>
    <string name="network_status_success">Status posted!</string>
    <string name="network_posting_status">Posting status. Please wait!</string>
    <string name="google_play_services_resolved_connection_error">Google Play Services connection resolved!</string>

</resources>
